--- a/style/index.css
+++ b/style/index.css
@@ -1,21 +1,34 @@
 body {
     background-color: #e1decb;
 }
+#root {
+    width: 5px;
+}
 .reserv-plus {
     display: flex;
     margin: 0 0 0 2rem;
-    font-size: 2.1rem;
+    font-size: 1.8rem;
     font-weight: bold;
 }
 .plus {
-    margin-top: 2rem;
+    margin-top: 1.6rem;
     color: #f99007;
 }
 .scan-document {
-    margin: 2rem 0 0 25rem;
     line-height: 0.1rem;
 }
 .head {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
+}
+.scan-document-qr {
+    display: flex;
+    margin: 1.5rem 0 0 6rem;
+}
+.qr {
+    font-size: 0.6rem;
+    margin: 0.5rem 0 0 1rem;
+    border: 5px solid black;
+    height: 1rem;
+    border-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 11' width='11' height='11'><g fill='000000'><rect width='1' height='5'/><rect y='6' width='1' height='5'/><rect x='10' y='6' width='1' height='5'/><rect x='10' width='1' height='5'/><rect width='5' height='1'/><rect y='10' width='5' height='1'/><rect x='6' y='10' width='5' height='1'/><rect x='6' width='5' height='1'/></g></svg>") 5;
 }
