--- a/style/index.css
+++ b/style/index.css
@@ -6,7 +6,7 @@ body {
 }
 .reserv-plus {
     display: flex;
-    margin: 0 0 0 2rem;
+    margin: 0 0 0 1rem;
     font-size: 1.8rem;
     font-weight: bold;
 }
@@ -23,12 +23,8 @@ body {
 }
 .scan-document-qr {
     display: flex;
-    margin: 1.5rem 0 0 6rem;
+    margin: 1.5rem 0 0 7rem;
 }
 .qr {
-    font-size: 0.6rem;
-    margin: 0.5rem 0 0 1rem;
-    border: 5px solid black;
-    height: 1rem;
-    border-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 11' width='11' height='11'><g fill='000000'><rect width='1' height='5'/><rect y='6' width='1' height='5'/><rect x='10' y='6' width='1' height='5'/><rect x='10' width='1' height='5'/><rect width='5' height='1'/><rect y='10' width='5' height='1'/><rect x='6' y='10' width='5' height='1'/><rect x='6' width='5' height='1'/></g></svg>") 5;
+    margin: 1rem;
 }
