started work with main document front page

--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,6 @@
 body {
     background-color: #e1decb;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 #root {
     width: 5px;
@@ -18,7 +19,6 @@ body {
     line-height: 0.1rem;
 }
 .head {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
 }
 .scan-document-qr {
@@ -27,4 +27,18 @@ body {
 }
 .qr {
     margin: 1rem;
+}
+.main-document {
+    border: solid gray 0.1rem;
+    border-radius: 10% 10% 10% 10%;
+    width: 22.5rem;
+    height: 24rem;
+    margin-left: 0.5rem;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    font-size: 2rem;
+    background-color: #d5d3be;
+}
+.main-document-name {
+    margin: 0.9rem;
 }
