--- a/style/index.css
+++ b/style/index.css
@@ -15,6 +15,11 @@ body {
     margin-top: 0.7rem;
     height: 1.3rem;
 }
+#scrolling-canvas {
+    width: 100%;
+    background-color: #979387;
+    color: #f9f8f4;
+}
 .small-text {
     font-size: 1rem;
 }
@@ -59,14 +64,7 @@ body {
     margin: 0.9rem 0.9rem 0 0.9rem;
 }
 .main-document-footer {
-    position: relative;
-    margin-left: -20rem;
-}
-.scrolling-text {
-    font-size: 1rem;
-    width: 25rem;
-    background-color: gray;
-    animation: scroll 5s linear infinite;
+    margin-left: -18rem;
 }
 @keyframes scroll {
     0% {
