--- a/style/index.css
+++ b/style/index.css
@@ -23,6 +23,11 @@ body {
 #three-dot-menu {
     background-color: orange;
     border-radius: 100% 100% 100% 100%;
+    margin: 5rem 0 1rem 6rem;
+    padding: 0.8rem 1rem 0.8rem 0.6rem;
+    height: 1rem;
+    width: 1rem;
+    font-size: 0.9rem;
 }
 .small-text {
     font-size: 1rem;
@@ -57,7 +62,7 @@ body {
     border: solid gray 0.1rem;
     border-radius: 10% 10% 10% 10%;
     width: 22.5rem;
-    height: 40rem;
+    height: 37rem;
     margin-left: 0.5rem;
     display: grid;
     grid-template-columns: 4fr 1fr;
@@ -72,4 +77,6 @@ body {
 }
 .name-three-dot-menu {
     display: flex;
+    height: 10rem;
+    width: 15rem;
 }
